...
            Image(nsImage: NSApp.applicationIconImage).resizable().aspectRatio(
                contentMode: .fit
            ).frame(height: 128)

            VStack(alignment: .center, spacing: 32) {
                VStack(alignment: .center, spacing: 8) {
                    Text("Scaffolde").bold().font(.title)
                    Text("A rigid canvas for your ideas.").font(.caption).tint(
                        .secondary
                    ).opacity(0.8)
                }

                VStack(spacing: 2) {
...
